use Thor to smoothen out the rest, good enough state.  Not jumpy or jerky, is smooth and recoverable when the Ui breaks.  only weird Ui breaking is when the content is fully scrolled to the bottom and we flick upwards.  We can detect the flick, but we can't control the <html> element thats fired to auto scroll with momentum, it can only be controlled once the momentum scroll stops

--- a/modules/oxide/src/less/theme/components/fullscreen/fullscreen.less
+++ b/modules/oxide/src/less/theme/components/fullscreen/fullscreen.less
@@ -15,6 +15,7 @@
   left: 0;
   margin: 0;
   overflow: hidden;
+  overscroll-behavior: none;
   padding: 0;
   position: fixed;
   top: 0;
@@ -31,25 +32,4 @@
   .tox.tox-tinymce-aux {
     z-index: @z-index-fullscreen + 1;
   }
-}
-
-// Mobile specific, find me a new home
-body.tox-fullscreen,
-html.tox-fullscreen {
-  bottom: 0;
-  height: 100%;
-  left: 0;
-  min-height: 100%;
-  overflow: hidden;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-div.tox-edit-area {
-  position: absolute;
-}
-
-html {
-  background-color: red;
 }
